# cookiecutter-terragrunt-project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cookiecutter.json  multicz.toml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  pytest.yml
.multicz/: state.json
scripts/: add_license_header.py  rewrite-dependabot-commit.sh
tests/: test_create_project.py
{{cookiecutter.project_slug}}/: .bashrc  README.md  config.{{cookiecutter.default_environment}}.yaml
{{cookiecutter.project_slug}}/google/: terragrunt.hcl
