# SPDX-License-Identifier: MIT
# Copyright (c) 2024-2026 Chris <goabonga@pm.me>

[project]
name = "cookiecutter-terragrunt-project"
version = "0.1.0"
description = "A Cookiecutter template to scaffold scalable, multi-environment Terragrunt infrastructure projects."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Chris", email = "goabonga@pm.me" }]
keywords = ["cookiecutter", "terragrunt", "terraform", "gcp", "template", "iac"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The Cookiecutter template lives at the repo root (so `cookiecutter
# gh:goabonga/cookiecutter-terragrunt-project` keeps working) and is
# force-included into the distribution under an importable package path
# so it can also be published to and consumed from PyPI. There is no
# Python module, hence `bypass-selection`.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.wheel.force-include]
"cookiecutter.json" = "cookiecutter_terragrunt_project/cookiecutter.json"
"{{cookiecutter.project_slug}}" = "cookiecutter_terragrunt_project/{{cookiecutter.project_slug}}"

[tool.hatch.build.targets.sdist]
include = [
    "cookiecutter.json",
    "{{cookiecutter.project_slug}}",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "cookiecutter>=2.6",
    "pytest>=8.3",
    "pytest-cookies>=0.7",
    "pyyaml>=6.0",
    "ruff>=0.13",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
# The template directory holds Jinja-templated, non-Python files; never
# lint or format it.
extend-exclude = [".venv", "{{cookiecutter.project_slug}}"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
